--- a/src/App.css
+++ b/src/App.css
@@ -89,9 +89,8 @@ body {
 }
 
 .MuiSelect-select {
-  padding: 10px !important;
+  padding: 0 26px 0 10px !important;
 }
-
 .kpNhUO {
   display: inline-block;
   max-width: 100%;
@@ -125,12 +124,6 @@ input::placeholder {
 .MuiTablePagination-menuItem {
   font-size: 1.2rem !important;
 }
-
-.MuiSelect-select {
-  padding: 10px !important;
-}
-/* body {
- } */
 
 li {
   font-weight: 400;
