--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,9 @@ body {
   max-height: 200px;
   overflow: scroll;
 }
+.css-133vrgo-MuiInputBase-root-MuiOutlinedInput-root.Mui-disabled {
+  background-color: #fafafa !important;
+}
 
 span {
   font-weight: 400 !important;
@@ -127,3 +130,24 @@ input::placeholder {
 li {
   font-weight: 400;
 }
+.dropdown {
+  position: relative;
+  /* display: inline-block; */
+}
+
+/* .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content option {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+} */
